<resources>
    <string name="app_name">SeizenPlayer</string>
    <string name="previous_song"><![CDATA[|<]]></string>
    <string name="play"><![CDATA[>]]></string>
    <string name="play_next"><![CDATA[>|]]></string>
    <string name="lyrics">Lyrics</string>
    <string name="close">Close</string>
    <string name="none">none</string>
    <string name="settings">Settings</string>
    <string name="pause">||</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="notification">Notification</string>
</resources>